# csit

./: .gitattributes  .gitignore  .gitmodules  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE.md  MAINTAINERS.md  README.md  SECURITY.md  Taskfile.yml
.github/: CODEOWNERS  release-config.json  release-manifest.json
.github/actions/deploy-ads/: README.md  action.yml
.github/actions/deploy-agp/: README.md  action.yml
.github/actions/deploy-components/: action.yaml
.github/actions/detect-changes/: action.yaml
.github/actions/setup-env/: action.yaml
.github/actions/setup-go/: action.yaml
.github/actions/setup-k8s/: action.yaml
.github/actions/setup-python/: action.yaml
.github/workflows/: release-images.yaml  release-please-check.yaml  release.yaml  reusable-docker-build-push.yaml  test-integrations.yaml  test-remote-workflow-dispatch.yaml  test-reusable-components.yaml  test-samples.yaml
benchmarks/: Taskfile.yml  go.mod
benchmarks/agntcy-agp/: Taskfile.yml
benchmarks/agntcy-agp/tests/: simple_gateway_test.go
benchmarks/agntcy-dir/: Taskfile.yml
benchmarks/agntcy-dir/tests/: push_agent_test.go
benchmarks/agntcy-slim/: Taskfile.yml
benchmarks/agntcy-slim/tests/: simple_gateway_test.go  suite_test.go
integrations/: Taskfile.yaml  Taskfile.yml  go.mod  go.sum
integrations/agntcy-agp/: Taskfile.yml
integrations/agntcy-agp/agentic-apps/: CHANGELOG.md  docker-bake.hcl
integrations/agntcy-agp/agentic-apps/autogen_agent/: Dockerfile  autogen_agent.py  pyproject.toml
integrations/agntcy-agp/agentic-apps/autogen_agent/simple_agentic_app/: simple_agentic_app.py
integrations/agntcy-agp/agentic-apps/langchain_agent/: Dockerfile  langchain_agent.py  pyproject.toml
integrations/agntcy-agp/agentic-apps/langchain_agent/simple_weather_agent/: simple_weather_agent.py
integrations/agntcy-agp/components/helm/: Chart.yaml  values.yaml
integrations/agntcy-agp/components/helm/gateway/: Chart.yaml  values.yaml
integrations/agntcy-agp/tests/: mcp_porxy_test.go  mcp_proxy_test.go  sanity_test.go  simple_test.go  suite_test.go
integrations/agntcy-apps/: README.md  Taskfile.yml  pyproject.toml
integrations/agntcy-apps/marketing-campaign/: run_marketing_campaign.py
integrations/agntcy-apps/tools/: wfsm_runner.py
integrations/agntcy-dir/: Taskfile.yml
integrations/agntcy-dir/components/config/: bootstrap.yaml
integrations/agntcy-dir/components/helm/: Chart.yaml  values.yaml
integrations/agntcy-dir/examples/testdata/: expected_agent.json
integrations/agntcy-dir/tests/: compiler_sanity_test.go  compiler_test.go  delete_agent_test.go  find_samples.go  list_agent_test.go  networking_test.go  push_agent_test.go  samples_compile_test.go  suite_test.go
integrations/agntcy-slim/: Taskfile.yml
integrations/agntcy-slim/agentic-apps/: CHANGELOG.md  docker-bake.hcl
integrations/agntcy-slim/agentic-apps/autogen_agent/: Dockerfile  autogen_agent.py  pyproject.toml
integrations/agntcy-slim/agentic-apps/autogen_agent/simple_agentic_app/: simple_agentic_app.py
integrations/agntcy-slim/agentic-apps/langchain_agent/: langchain_agent.py  pyproject.toml
integrations/agntcy-slim/agentic-apps/langchain_agent/simple_weather_agent/: simple_weather_agent.py
integrations/agntcy-slim/components/certificates/: ca-based-issuer.yaml  client-cert.yaml  ecdsa-ca-cert.yaml  self-signed-cluster-issuer.yaml  server-cert.yaml
integrations/agntcy-slim/components/config/base/: client-config.yaml  server-config.yaml
integrations/agntcy-slim/tests/: mcp_proxy_test.go  sanity_test.go
integrations/agntcy-wfsm/: Taskfile.yml
integrations/agntcy-wfsm/assets/: echo_agent.json  manifest.json
integrations/testutils/: docker_runner.go  local_runner.go  runner.go  runner_test.go
integrations/testutils/k8shelper/: job.go  k8shelper.go  pod.go  service.go
integrations/testutils/runner/: docker_runner.go  local_runner.go  runner.go  runner_test.go
samples/: Taskfile.yml
samples/agents/: Taskfile.yaml  docker-bake.hcl
samples/agents/docker-env-cli-stdout/: .env.example  Dockerfile  README.md  Taskfile.yaml  Taskfile.yml  docker-bake.hcl  pyproject.toml  requirements.txt  script.py
samples/agents/utils/: setup-env.sh
samples/autogen/: Taskfile.yml
samples/autogen/semantic-router/: .env.example  Dockerfile  README.md  Taskfile.yml  deployments.yaml  docker-compose.yaml  kustomization.yaml  pyproject.toml
samples/autogen/semantic-router/agents/: finance.py  hr.py  proxy.py  router.py
samples/autogen/semantic-router/common/: _agents.py  _semantic_router_components.py
samples/autogen/semantic-router/runtime/: host.py
samples/autogen/semantic-router/tests/: test_api.py
samples/crewai/simple_crew/: .env.example  README.md  Taskfile.yaml  Taskfile.yml  agent.base.json  build.config.yaml  build.config.yml  model.json  pyproject.toml
samples/crewai/simple_crew/simple_crew/: __init__.py  crew.py  main.py
samples/crewai/simple_crew/simple_crew/config/: agents.yaml  tasks.yaml
samples/crewai/simple_crew/simple_crew/tools/: custom_tool.py
samples/crewai/simple_crew/simple_crew/utils/: evaluator.py
samples/evaluation/: Taskfile.yaml  Taskfile.yml  pyproject.toml
samples/evaluation/model/: crew.py
samples/evaluation/tests/: _deepeval.py  _ragas.py  deepeval.py  ragas.py
samples/langgraph/research/: README.md  Taskfile.yaml  agent.base.json  build.config.yaml  build.config.yml  model.json  pyproject.toml
samples/langgraph/research/research/: main.py
samples/llama-deploy/llama-sum/: Dockerfile  README.md  Taskfile.yaml  Taskfile.yml  pyproject.toml
samples/llama-deploy/llama-sum/k8s/: README.md  config-map.yaml  control-plane.yaml  gen.yaml  msg-queue.yaml  sum.yaml
samples/llama-deploy/llama-sum/llama_sum/: deploy_control_plane.py  deploy_msg_queue.py  deploy_num_gen.py  deploy_sum.py  run.py  workflows.py
samples/llama-deploy/llama-sum/tests/: test.py
samples/llama-index/research/: Taskfile.yaml  Taskfile.yml  agent.base.json  build.config.yaml  model.json  pyproject.toml
samples/llama-index/research/research/: main.py
(+12 files in other folders)
