[tool.poetry]
name = "evaluation"
version = "0.1.0"
description = ""
authors = ["Tagscherer Ádám <adam.tagscherer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
langchain-ollama = "^0.1.3"
crewai = "^0.55.2"
duckduckgo-search = "^6.2.11"
openinference-instrumentation-langchain = "^0.1.28"
openinference-instrumentation-crewai = "^0.1.2"
ragas = "^0.2.6"
deepeval = "^2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
