[project]
name = "evaluation"
version = "0.1.0"
description = ""
authors = [{ name = "Tagscherer Ádám", email = "adam.tagscherer@gmail.com" }]
requires-python = "<3.13,>=3.10"
readme = "README.md"

dependencies = [
    "langchain-ollama (>=0.2.3,<0.3.0)",
    "crewai (>=0.108.0,<0.109.0)",
    "duckduckgo-search (>=7.5.2,<8.0.0)",
    "openinference-instrumentation-langchain (>=0.1.37,<0.2.0)",
    "openinference-instrumentation-crewai (>=0.1.7,<0.2.0)",
    "ragas (>=0.2.14,<0.3.0)",
    "deepeval (>=2.6.3,<3.0.0)",
    "langchain-community (>=0.3.20,<0.4.0)",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
