[project]
name = "semantic-router"
version = "0.1.0"
description = "Example of semantic router taken from the autogen repository"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "autogen-core (>=0.4.9.2,<0.5.0.0)",
    "fastapi (>=0.115.11,<0.116.0)",
    "openai (>=1.68.0,<2.0.0)",
    "rich (>=13.9.4,<14.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "urllib3 (>=2.3.0,<3.0.0)",
    "asyncio (>=3.4.3,<4.0.0)",
    "logging (>=0.4.9.6,<0.5.0.0)",
    "autogen-ext[grpc] (>=0.4.9.2,<0.5.0.0)",
]

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.1"
pytest = "^8.3.5"
