[tool.poetry]
name = "research"
version = "0.1.0"
description = ""
authors = ["Michele Papalini <micpapal@cisco.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
llama-index-llms-azure-openai = "^0.3.0"
llama-index = "^0.12.10"
llama-index-utils-workflow = "^0.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
