[project]
name = "research"
version = "0.1.0"
description = ""
authors = [{ name = "Michele Papalini", email = "micpapal@cisco.com" }]
readme = "README.md"
requires-python = "<4.0,>=3.9"

dependencies = [
    "llama-index-llms-azure-openai (>=0.3.2,<0.4.0)",
    "llama-index (>=0.12.25,<0.13.0)",
    "llama-index-utils-workflow (>=0.3.0,<0.4.0)",
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
